Save events as CSV and use removeFirst()
Replace object serialization in EventManagement with plain-text CSV-style output written via BufferedWriter. Each Event is written as a comma-separated line including id, title, dateTime, location, capacity, Active/Cancelled status and subtype-specific columns (Workshop topic, Seminar speaker, Concert ageRestriction). Adds a success log message and preserves IO exception handling. Also change Waitlist.remove to use removeFirst() (LinkedList-style removal) instead of remove(0).